# statsu

./: Cargo.toml
src/: main.rs
src/anilist/: api.rs  mod.rs
