[package]
name = "statsu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
derivative = "2.2"
governor = "0.4"
lazy_static = "1.4"
petgraph = "0.6"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["full"] }
