[package]
name = "statsu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.6", features = ["derive"] }
governor = "0.5.0"
nonzero_ext = "0.3.0"
once_cell = "1.15.0"
petgraph = "0.6.2"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = ["full"] }
